--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,32 @@
 html {
+  line-height: 1.5;
   font-family: 'Merriweather', serif;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.nav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-align: center;
+  font-size: 1.125rem;
+}
+
+.nav a {
+  background-color: #d05c2e;
+  color: #fff;
+  margin: 0 0 0 .7rem;
+  padding: .5em 0 0;
+}
+
+.nav li {
+  display: inline-block;
+}
+
+h1 {
+  font-size: 2rem;
+  background-color: #d05c2e;
+  color: #fff;
+  font-weight: bold;
 }
