--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,20 @@ html {
   text-align: center;
 }
 
+body {
+  margin: 0;
+}
+
 .nav {
   margin: 0;
   padding: 0;
   list-style-type: none;
   text-align: center;
   font-size: 1.125rem;
+}
+
+header {
+  background-color: #d05c2e;
 }
 
 .nav a {
