--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   line-height: 1.5;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   box-sizing: border-box;
   text-align: center;
 }
@@ -37,4 +37,18 @@ h1 {
   background-color: #d05c2e;
   color: #fff;
   font-weight: bold;
+}
+
+.grainleft {
+  float: left;
+  width: 40px;
+}
+
+.grainright {
+  float: right;
+  width: 40px;
+}
+
+div {
+  display: inline-block;
 }
