--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ header {
   color: #fff;
   margin: 0 0 0 .7rem;
   padding: .5em 0 0;
+  text-decoration: none;
 }
 
 .nav a:hover {
@@ -41,6 +42,7 @@ h1 {
   background-color: #d05c2e;
   color: #fff;
   font-weight: bold;
+  margin: 0 0 .3rem;
 }
 
 .grainleft {
